tests/NormalTests/paczka1/fuzzy1/79995040.err
Error in line 1: x8J1LV3 S368 61,8
Error in line 7: x8J1LV3 A|51 15|,1
Error in line 2: x8J1LV3 A751 63,1
Error in line 4: CQvzP A131 49,1
Error in line 22: QfRG S651 68,9
Error in line 21: A751 A751 45,2
Error in line 36: QfRG S651 75,0
